--- a/package.json
+++ b/package.json
@@ -65,13 +65,21 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.1",
+    "@babel/standalone": "^7.24.5",
+    "@monaco-editor/react": "^4.6.0",
+    "@typescript/ata": "^0.9.4",
+    "allotment": "^1.20.0",
+    "monaco-editor": "^0.48.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5"
   },
   "devDependencies": {
     "@ant-design/icons": "^5.2.6",
     "@commitlint/cli": "^17",
     "@testing-library/react": "^14",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__standalone": "^7.1.7",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -101,7 +109,6 @@
     "semantic-release": "^20",
     "semantic-release-config-gitmoji": "^1",
     "stylelint": "^15",
-    "typescript": "^5",
     "vitest": "latest"
   },
   "peerDependencies": {
