--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "main": "lib/index.js",
   "module": "es/index.js",
-  "types": "lib/index.d.ts",
+  "types": "es/index.d.ts",
   "files": [
     "lib",
     "es"
