--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "resolutions": {
+    "dumi": "~2.2.17"
+  },
   "dependencies": {
     "@babel/runtime": "^7.23.1",
     "@babel/standalone": "^7.24.5",
