--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     ]
   },
   "resolutions": {
-    "dumi": "~2.2.17"
+    "dumi": "~2.2.17",
+    "react": "~18.2.x",
+    "react-dom": "~18.2.x"
   },
   "dependencies": {
     "@babel/runtime": "^7.23.1",
@@ -96,7 +98,7 @@
     "concurrently": "^7",
     "conventional-changelog-gitmoji-config": "^1",
     "cross-env": "^7",
-    "dumi": "^2",
+    "dumi": "~2.2.17",
     "dumi-theme-antd-style": "^0.29.5",
     "eslint": "^8",
     "father": "^4",
@@ -108,8 +110,6 @@
     "prettier": "^2",
     "prettier-plugin-organize-imports": "^3",
     "prettier-plugin-packagejson": "^2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "semantic-release": "^20",
     "semantic-release-config-gitmoji": "^1",
     "stylelint": "^15",
